# cash_flow_management

./: .env.example  .gitignore  README.md  docker-compose.yml  example.env
backend/: .dockerignore  Dockerfile  db.sqlite3  entrypoint.sh  main.py  manage.py  pyproject.toml  ruff.toml
backend/cash_flow/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/cash_flow/fixtures/: initial_data.json
backend/cash_flow/migrations/: 0001_initial.py  0002_create_initial_data.py
backend/cash_flow_management/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: test.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: CashFlowFormDialog.tsx  CashFlowTable.tsx  ConfirmDialog.tsx  DictionaryDialogs.tsx  DictionaryTable.tsx  FiltersBar.tsx
